// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-button kol-button--normal kol-button--standalone kol-details__heading-button">
          <button aria-controls="details-control-nonce" aria-expanded="false" class="kol-button__button" id="details-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Zusammenfassung
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-heading-nonce" class="collapsible__content indented-text kol-details__content" id="details-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--open kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-button kol-button--normal kol-button--standalone kol-details__heading-button">
          <button aria-controls="details-control-nonce" aria-expanded="true" class="kol-button__button" id="details-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Zusammenfassung
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-labelledby="details-heading-nonce" class="collapsible__content indented-text kol-details__content" id="details-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-button kol-button--disabled kol-button--normal kol-button--standalone kol-details__heading-button">
          <button aria-controls="details-control-nonce" aria-expanded="false" class="kol-button__button" disabled="" id="details-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Zusammenfassung
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-heading-nonce" class="collapsible__content indented-text kol-details__content" id="details-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <div class="collapsible collapsible--disabled collapsible--open kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-button kol-button--disabled kol-button--normal kol-button--standalone kol-details__heading-button">
          <button aria-controls="details-control-nonce" aria-expanded="true" class="kol-button__button" disabled="" id="details-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Zusammenfassung
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-labelledby="details-heading-nonce" class="collapsible__content indented-text kol-details__content" id="details-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=3 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="details-nonce">
      <h3 class="collapsible__heading kol-details__heading kol-headline kol-headline--h3 kol-headline--single">
        <div class="collapsible__heading-button kol-button kol-button--normal kol-button--standalone kol-details__heading-button">
          <button aria-controls="details-control-nonce" aria-expanded="false" class="kol-button__button" id="details-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Zusammenfassung
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </h3>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-heading-nonce" class="collapsible__content indented-text kol-details__content" id="details-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <div class="collapsible kol-details" id="details-nonce">
      <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
        <div class="collapsible__heading-button kol-button kol-button--normal kol-button--standalone kol-details__heading-button">
          <button aria-controls="details-control-nonce" aria-expanded="false" class="kol-button__button" id="details-heading-nonce" type="button">
            <span class="kol-button__text kol-span">
              <span class="kol-span__container">
                <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-right" role="presentation"></i>
                <span class="kol-span__label">
                  Zusammenfassung
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden="">
                  <slot name="expert" slot="expert"></slot>
                </span>
              </span>
            </span>
          </button>
        </div>
      </strong>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" aria-labelledby="details-heading-nonce" class="collapsible__content indented-text kol-details__content" id="details-control-nonce" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-details>
`;
